--- a/adaence-backend/package.json
+++ b/adaence-backend/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^3.1.10"
   },
   "prisma": {
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "postinstall": "prisma generate"
   }
 }
