--- a/adaence-backend/package.json
+++ b/adaence-backend/package.json
@@ -26,6 +26,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.4",
     "prisma": "^6.10.1"
   },
   "devDependencies": {
