--- a/adaence-backend/package.json
+++ b/adaence-backend/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.4",
-    "prisma": "^6.10.1"
+    "prisma": "^6.10.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
